--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+bcrypt==4.0.1
 certifi==2025.4.26
 click==8.2.1
 deprecation==2.1.0
+email-validator==2.1.0
 fastapi==0.115.12
 frozenlist==1.6.0
 gotrue==2.12.0
@@ -21,11 +23,14 @@ idna==3.10
 iniconfig==2.1.0
 multidict==6.4.4
 packaging==25.0
+passlib==1.7.4
 pluggy==1.6.0
 postgrest==1.0.2
 propcache==0.3.1
 pydantic==2.11.5
 pydantic_core==2.33.2
+pydantic-settings==2.1.0
+pydantic-extra-types==2.2.0
 Pygments==2.19.1
 PyJWT==2.10.1
 pytest==8.4.0
